added a separate function to get an image by date
